Fix babel regeneratorRuntime error, git ignore node_modules

--- a/frontend/src/pug/index.pug
+++ b/frontend/src/pug/index.pug
@@ -29,6 +29,7 @@ html(lang='en')
               p.content-title Home Status
               div.chart-container
                 canvas#statusChart(width='400', height='400')
+    script(src='js/polyfill.js')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js')
     script(src='js/moment.js')
     script(src='js/index.js')
