--- a/frontend/src/pug/index.pug
+++ b/frontend/src/pug/index.pug
@@ -27,8 +27,10 @@ html(lang='en')
           div.grid-item
             div.grid-content
               p.content-title Home Status
+              button#day1-button 1 Day
+              button#day2-button 2 Days
+              button#day7-button 7 Days
               div.chart-container
-                canvas#statusChart(width='400', height='400')
     script(src='js/polyfill.js')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js')
     script(src='js/moment.js')
