--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,107 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800");
-
 $off-white: #efefef;
 $white: #fefefe;
+$grey: #444;
 $dark: #222;
+$accent: #1dd1a1;
 
 $content-spacing: 1em;
 
 $title-size: 1.6em;
-$title-weight: 600;
+$title-weight: 700;
 $heading-size: 1.5em;
-$heading-weight: 500;
+$heading-weight: 600;
 $subheading-size: 1.25em;
-$subheading-weight: 400;
+$subheading-weight: 600;
 $p-size: 1em;
-$p-weight: 400;
+$p-weight: 500;
+
+$transition-length: 0.25s;
+$content-border-radius: 0.25em;
+
+@import 'partials/mixins';
+@import 'partials/media-queries';
+@import 'partials/content';
+@import 'partials/grid';
+@import 'partials/inputs';
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  background: #efefef;
-  display: flex;
-  margin: 0;
-  min-height: 100vh;
-  width: 100vw;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-  color: #444;
-}
-
-h1 {
-  font-size: $title-size;
-  font-weight: $title-weight;
-  color: $dark;
-  margin: 0.25em 0;
-}
-
-p {
-  font-size: $p-size;
-  font-weight: $p-weight;
-  color: $dark;
-}
-
-#main {
-  display: flex;
-  flex: 1 auto;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  padding: $content-spacing;
-}
-
-.header {
-  display: flex;
-  padding: $content-spacing;
-  background: $white;
-  margin-bottom: $content-spacing;
-}
-
-.grid-container {
-  display: flex;
-  flex: 1 auto;
-}
-
-#grid {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  row-gap: $content-spacing;
-  column-gap: $content-spacing;
-  grid-template-columns: 1fr minmax(10em, 75%);
-  grid-template-rows: 1fr;
-  .grid-item {
-    display: flex;
-    flex-direction: column;
-    background: $white;
-    .grid-content {
-      display: flex;
-      flex: 1 auto;
-      flex-direction: column;
-      padding: $content-spacing;
-    }
-  }
-}
-
-.chart-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.content-title {
-  font-size: $heading-size;
-  font-weight: $heading-weight;
-  margin: 0.25em 0;
-}
-
-@media screen and (max-width: 60em) {
-  html body {
-    #grid {
-      grid-template-columns: 100%;
-    }
-  }
 }
