--- a/frontend/src/scss/partials/_content.scss
+++ b/frontend/src/scss/partials/_content.scss
@@ -51,3 +51,7 @@ body {
     font-weight: $heading-weight;
     margin: 0.25em 0 0.75em 0;
   }
+
+  .value {
+    font-weight: $heading-weight;
+  }
