--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,9 @@ p {
   font-weight: 600;
   margin: 0.25em 0 0.75em 0; }
 
+.value {
+  font-weight: 600; }
+
 .grid-container {
   display: flex;
   flex: 1 auto; }
